Fix vertical align in meme text.

--- a/style/meme-style.css
+++ b/style/meme-style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Google Sans, sans-serif;
+}
+
 input[type="radio"]:checked+label {
   background-color: cornflowerblue;
 }
@@ -33,8 +37,8 @@ max-width: 100%;
   position: absolute;
   left: 0;
   right: 0;
-  margin: 15px 0;
-  padding: 0 5px;
+  margin: 0;
+  padding: 0;
   font-family: impact;
   color: white;
   text-shadow: 2px 0 black, -2px 0 black, 0 2px black, 0 -2px black;
@@ -44,7 +48,7 @@ max-width: 100%;
  }
  .line2 {
    top: 50%;
-   transform: translateY(-75%);
+   transform: translateY(-50%);
  }
 .line3 {
    bottom: 0;
